// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmark component renders a .Bookmark by default 1`] = `
<div
  className="Bookmark"
>
  <h2
    className="Bookmark__title"
  >
    <Link
      replace={false}
      to="/bookmark/undefined"
    />
  </h2>
  <button
    className="Bookmark__delete"
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    remove
  </button>
  <div
    className="Bookmark__dates"
  >
    <div
      className="Bookmark__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        Invalid Date
      </span>
    </div>
  </div>
</div>
`;

exports[`Bookmark component renders the Bookmark given props 1`] = `
<div
  className="Bookmark"
>
  <h2
    className="Bookmark__title"
  >
    <Link
      replace={false}
      to="/bookmark/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Bookmark__delete"
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    remove
  </button>
  <div
    className="Bookmark__dates"
  >
    <div
      className="Bookmark__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        15th Jan 2019
      </span>
    </div>
  </div>
</div>
`;
